--- a/index.html
+++ b/index.html
@@ -8,5 +8,14 @@
   <h1>Canarios Sabiondinchis 🧠🌋</h1>
   <p>Si ves esto, GitHub Pages funciona.</p>
 </body>
+<body>
+  <div id="app"></div>
+
+  <script src="js/state.js"></script>
+  <script src="js/ui.js"></script>
+  <script src="js/game.js"></script>
+  <script src="js/app.js"></script>
+</body>
+
 </html>
 
