--- a/index.html
+++ b/index.html
@@ -1,13 +1,10 @@
-<!DOCTYPE html>
-<html lang="es">
-<body>
-  <div id="app"></div>
+<script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore-compat.js"></script>
 
-  <script src="js/state.js"></script>
-  <script src="js/ui.js"></script>
-  <script src="js/game.js"></script>
-  <script src="js/app.js"></script>
-</body>
+<div id="app"></div>
 
-</html>
-
+<script src="js/state.js"></script>
+<script src="js/api.js"></script>
+<script src="js/game.js"></script>
+<script src="js/ui.js"></script>
+<script src="js/app.js"></script>
