--- a/index.html
+++ b/index.html
@@ -1,11 +1,43 @@
-<script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore-compat.js"></script>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8" />
+  <title>Canarios Sabiondinchis</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-<div id="app"></div>
+  <!-- Estilos -->
+  <link rel="stylesheet" href="css/styles.css" />
+</head>
 
-<script src="js/state.js"></script>
-<script src="js/api.js"></script>
-<script src="js/game.js"></script>
-<script src="js/ui.js"></script>
-<script src="js/app.js"></script>
+<body>
 
+  <!-- Contenedor principal -->
+  <div id="app"></div>
+
+  <!-- ========================= -->
+  <!-- Firebase SDK (OBLIGATORIO) -->
+  <!-- ========================= -->
+  <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore-compat.js"></script>
+
+  <!-- ========================= -->
+  <!-- Scripts del juego (ORDEN IMPORTANTE) -->
+  <!-- ========================= -->
+
+  <!-- Estado global -->
+  <script src="js/state.js"></script>
+
+  <!-- Firebase / API (define createRoom, joinRoom, etc.) -->
+  <script src="js/api.js"></script>
+
+  <!-- Lógica de juego (timer, cierre de ronda, etc.) -->
+  <script src="js/game.js"></script>
+
+  <!-- Renderizado UI -->
+  <script src="js/ui.js"></script>
+
+  <!-- Eventos y arranque -->
+  <script src="js/app.js"></script>
+
+</body>
+</html>
